# cpemanager

./: .gitignore  CHANGELOG.md  HANDOFF.md  MODIFICATIONS.md  PROJECT_MEMORY.md  README.md  cpe_antenna.py  cpe_lock.py  cpe_login.py  cpe_nbr.py  cpe_netmode.py  cpe_signal.py  environment.yml  pyproject.toml
.github/workflows/: desktop-build.yml
apps/flutter_cpemanager/: .metadata  README.md  pubspec.yaml
apps/flutter_cpemanager/android/app/: build.gradle.kts
apps/flutter_cpemanager/android/app/src/main/: AndroidManifest.xml
apps/flutter_cpemanager/ios/Runner/: Info.plist
apps/flutter_cpemanager/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter_cpemanager/lib/: main.dart
apps/flutter_cpemanager/lib/api/: cpe_client.dart  fiberhome_client.dart
apps/flutter_cpemanager/lib/domain/: cell_math.dart
apps/flutter_cpemanager/macos/Runner.xcodeproj/: project.pbxproj
apps/flutter_cpemanager/macos/Runner/Configs/: AppInfo.xcconfig
apps/flutter_cpemanager/test/: cpe_client_test.dart  widget_test.dart
apps/flutter_cpemanager/web/: index.html  manifest.json
apps/flutter_cpemanager/windows/: CMakeLists.txt
apps/flutter_cpemanager/windows/runner/: Runner.rc  main.cpp
docs/: API_REFERENCE.md  APP_PACKAGING_STRATEGY.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.3.2.md
packaging/: desktop_entry.py
src/cpemanager/: __init__.py  cli.py  client.py  endpoints.py  gui.py  xmlutil.py
tests/: test_cli.py  test_client.py  test_xmlutil.py
tools/: build_desktop.py  fiberhome_readonly_smoke.py
(+2 files in other folders)
